<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".RsltActivity"
    tools:deviceIds="wear">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTit3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRes"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/vwNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0E0E0E" />

            <TextView
                android:id="@+id/vwApe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0E0E0E" />

            <TextView
                android:id="@+id/vwEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0E0E0E" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/btnNavIni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Inicio"
                android:text="@string/btnInicio" />

            <Button
                android:id="@+id/btnSal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Salir"
                android:text="@string/btnSalir" />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>