<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt1Foot"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="706dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt1Bien"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="40dp" />

        <TextView
            android:id="@+id/txtTit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="334dp"
            android:contentDescription="UMB"
            app:srcCompat="@mipmap/umbvirtualogo"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="85dp" />

        <TextView
            android:id="@+id/txtList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A14040"
            android:textAlignment="center"
            android:textColor="#090909"
            android:textSize="18sp"
            tools:text="Menu Principal" />

        <ListView
            android:id="@+id/lstMenu"
            android:layout_width="match_parent"
            android:layout_height="121dp" />

        <TextView
            android:id="@+id/txtpie"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#2196F3"
            android:textAlignment="center"
            android:textColor="#090909"
            android:textSize="18sp"
            tools:text="@string/txt1Foot" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>